@@ -1,3 +1,8 @@
+2013-12-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* spc_pdfm.c: Guarantee that mline in is_pdfm_mapline(mline) is a
+	zero-ended string when called by spc_handler_pdfm_mapline().
+
 2013-11-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* xbb.c: Add suffixes ".ai", ".AI" for the Illustrator files.
